--- a/src/pages/NotFound/NotFoundStyles.module.css
+++ b/src/pages/NotFound/NotFoundStyles.module.css
@@ -1,52 +1,51 @@
 .notFound {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #024637, #034323, #025f49);
-    position: relative;
     min-height: calc(100vh - 40px);
     width: 100vw;
-    color: var(--text-color);
     padding: 50px 20px;
+    color: var(--text-color);
+}
+
+.notFoundContainer {
+    background: rgba(0, 0, 0, 0.3);
+    padding: 30px;
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.38);
+    width: 700px;
+}
+
+.innerGlass {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    text-align: center;
 }
 
 .title {
-    align-self: center;
-    margin-top: 30px;
     font-size: 3rem;
-    text-align: center;
-    flex-shrink: 0;
-    cursor: default;
-}
-
-.contentContainer {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 50px;
-    text-align: center;
-    background-color: var(--container-bg-color);
-    border-radius: 12px;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
-    align-items: flex-start;
-    border: 1px solid #ccc;
+    margin-bottom: 15px;
+    font-weight: bold;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
 }
 
 .text {
-    font-size: 1.5rem;
-    color: var(--text-color);
-    margin-bottom: 20px;
+    font-size: 1.4rem;
+    line-height: 1.8;
+    margin-bottom: 15px;
     text-align: left;
 }
 
 .linkList {
     list-style: none;
+    padding: 0;
     display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
     justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .linkItem {
@@ -55,9 +54,9 @@
 
 .link {
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: var(--link-color);
-    font-weight: 600;
+    font-weight: bold;
     text-transform: uppercase;
     transition: all 0.3s ease;
 }
@@ -68,31 +67,20 @@
 }
 
 @media (max-width: 768px) {
-    .notFound{
-        min-height: calc(100svh - 40px);
-    }
-
     .title {
         font-size: 2.5rem;
     }
 
-    .contentContainer {
-        padding: 15px;
-        width: 100%;
-        max-width: 100%;
-        box-sizing: border-box;
-        margin-top: 20px;
-    }
-
     .text {
-        font-size: 1.25rem;
-    }
-
-    .link {
         font-size: 1.2rem;
     }
 
-    .linkList {
-        gap: 20px;
+    .link {
+        font-size: 1rem;
+    }
+
+    .notFoundContainer {
+        padding: 20px;
+        width: 90%;
     }
 }
