--- a/src/pages/Projects/ProjectsStyles.module.css
+++ b/src/pages/Projects/ProjectsStyles.module.css
@@ -1,91 +1,134 @@
 .projects {
+    width: 100%;
+    min-height: 100vh;
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    justify-content: center;
     align-items: center;
-    background: url("/src/assets/background.webp") no-repeat top center fixed;
-    background-size: cover;
-    padding-top: 50px;
-    position: relative;
-    min-height: calc(100vh - 40px);
-    width: 100vw;
+    padding: 80px 20px;
     color: var(--text-color);
+    flex-direction: column;
 }
 
-.projectsGrid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    width: 100%;
+.container {
+    padding: 60px;
+    border-radius: 16px;
+    width: 90%;
     max-width: 1200px;
-    margin-top: 30px;
-    overflow-x: visible;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.title {
+    font-size: 3.5rem;
+    text-align: center;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+    margin-bottom: 20px;
+    cursor: default;
 }
 
 .projectContainer {
-    border: 1px solid #ccc;
+    position: relative;
+    background: rgba(0, 0, 0, 0.3);
+    padding: 30px;
+    border-radius: 12px;
+    border: 1px rgba(255, 255, 255, 0.38) solid;
+}
+
+.innerGlass {
+    position: relative;
+    background: rgba(255, 255, 255, 0.1);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    background-color: var(--container-bg-color);
-    margin: 20px
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .projectTitle {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+    font-size: 2rem;
+    margin-bottom: 15px;
+    font-weight: bold;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 8px;
+    border-bottom: 3px solid var(--accent-color);
+    cursor: default;
 }
 
 .projectDescription {
-    margin-bottom: 20px;
-    font-size: 1.2em;
+    font-size: 1.4rem;
+    line-height: 1.8;
+    text-align: left;
+    margin-bottom: 15px;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
 }
 
 .projectLink {
     color: var(--link-color);
     text-decoration: none;
+    font-weight: bold;
 }
 
 .projectLink:hover {
     text-decoration: underline;
 }
 
-.title {
-    align-self: center;
-    margin-top: 30px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    font-size: 3rem;
-    text-align: center;
-    flex-shrink: 0;
-}
-
-.languagesContainer {
-    margin-top: 10px;
-}
-
 .languagesList {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
     display: flex;
-    gap: 10px;
     flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 15px;
 }
 
 .languageItem {
-    background-color: var(--accent-color);
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 1em;
-    font-family: 'IBM Plex Sans', sans-serif;
+    background: rgb(0 0 0 / 75%);
+    border-radius: 8px;
+    padding: 8px 12px;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ffffff3b;
+    font-size: 1.1rem;
 }
 
-@media (max-width: 768px) {
-    .project {
+@media (max-width: 1024px) {
+    .projects{
         min-height: calc(100svh - 40px);
     }
 
-    .projectsGrid {
-        grid-template-columns: 1fr;
+    .container {
+        width: 95%;
+    }
+
+    .title {
+        font-size: 3rem;
+    }
+
+    .projectTitle {
+        font-size: 1.8rem;
+    }
+
+    .projectDescription {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .container{
+        padding: 10px;
+        width: auto;
+    }
+
+    .title {
+        font-size: 2.8rem;
+    }
+
+    .projectTitle {
+        font-size: 1.6rem;
+    }
+
+    .projectDescription {
+        font-size: 1.1rem;
     }
 }
